can update game

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet">
     <script src="https://kit.fontawesome.com/b7c57b9a8d.js" crossorigin="anonymous"></script>
   </head>
   <body>
