--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet">
     <script src="https://kit.fontawesome.com/b7c57b9a8d.js" crossorigin="anonymous"></script>
+    <script src="lib/qrcode.min.js" async></script>
   </head>
   <body>
     <noscript>
