--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet">
     <script src="https://kit.fontawesome.com/b7c57b9a8d.js" crossorigin="anonymous"></script>
     <script src="lib/qrcode.min.js" async></script>
+    <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.8/dist/clipboard.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/3.3.3/adapter.min.js"></script>
   </head>
   <body>
