Can mark courts

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <script src="lib/qrcode.min.js" async></script>
     <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.8/dist/clipboard.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/3.3.3/adapter.min.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwSF8fT-pgNy76yz1CGs7o5kAsI64UDuw"></script>
+    
   </head>
   <body>
     <noscript>
