--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <!-- <link rel="icon" href="/public/favicon.ico"> -->
   <!-- <title>GO COURT 球場資源交流平台</title> -->
-  <!-- <meta property="og:title" content="GO COURT 球場資源交流平台" />
+  <meta property="og:title" content="GO COURT 球場資源交流平台" />
   <meta property="og:description" content="探索沒去過的球場，認識新球友" />
-  <meta property="og:site_name" content="GO COURT 球場資源交流平台" /> -->
+  <meta property="og:site_name" content="GO COURT 球場資源交流平台" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
