--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,15 @@
 </head>
 
 <body>
+  <div id="fb-root"></div>
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+
+
 </body>
 
 </html>
